This is actually the first question for Problem set 3, stopping work on this.

--- a/lesson4/lesson4_mynotes.html
+++ b/lesson4/lesson4_mynotes.html
@@ -55,6 +55,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 
 
+<p>**I realized this is actually work for problem set 3, I’m going to stop working on this and reopen code and markdown in the lesson 3 folder.</p>
 <div id="ggplot2-diamonds-data-set" class="section level1">
 <h1>GGPlot2 Diamonds Data Set</h1>
 <p>We need to perform some analysis on the ggplot2 diamonds data set to answer some questions.</p>
